--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="row">
             <div class="col-md-6 about-img-wrap">
                 <div class="about-img wow slideInRight">
-                    <img src="media/hello-section/image.png" alt="" class="img-responsive">
+                    <img src="media/hello-section/image.PNG" alt="" class="img-responsive">
                 </div>
             </div>
             <div class="col-md-6">
